--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "metu-ui": "^0.1.1",
     "react": "17.x",
     "react-dom": "17.x",
-    "umi": "^3.5.13"
+    "umi": "^3.5.13",
+    "wxlogin.react": "^0.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
