--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "metu-ui": "^0.1.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-grid-layout": "^1.2.5",
+    "react-infinite-scroller": "^1.2.4",
+    "react-lazyload": "^3.2.0",
+    "react-masonry-component": "^6.3.0",
+    "react-measure": "^2.5.2",
+    "react-photo-gallery": "6.1.4",
     "umi": "^3.5.13",
     "wxlogin.react": "^0.1.0"
   },
